--- a/index.html
+++ b/index.html
@@ -7,31 +7,22 @@
 
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
     <link rel="stylesheet" href="assets/L.Control.Sidebar.css" />
+    <link rel="stylesheet" href="assets/titus.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" /><![endif]-->
 
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-        }
-
-        html, body, #map {
-            height: 100%;
-        }
-
-        .lorem {
-            font-style: italic;
-            color: #AAA;
-        }
-    </style>
 </head>
 <body>
     <div id="sidebar">
-        <h1>Projektname</h1>
+        <h1 id="title">Projektname</h1>
 
         <p class="lorem">Hier könnte der Projekttext stehen</p>
 
-        Hier noch Fotos und Videos hin.
+        <div id="slides">
+            <img src="img/example-slide-1.jpg" alt="Photo by: Missy S Link: http://www.flickr.com/photos/listenmissy/5087404401/">
+            <img src="img/example-slide-2.jpg" alt="Photo by: Daniel Parks Link: http://www.flickr.com/photos/parksdh/5227623068/">
+            <img src="img/example-slide-3.jpg" alt="Photo by: Mike Ranweiler Link: http://www.flickr.com/photos/27874907@N04/4833059991/">
+            <img src="img/example-slide-4.jpg" alt="Photo by: Stuart SeegerLink: http://www.flickr.com/photos/stuseeger/97577796/">
+        </div>
     </div>
 
     <div id="map"></div>
@@ -39,6 +30,7 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
     <script src="assets/L.Control.Sidebar.js"></script>
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="assets/jquery.slides.min.js"></script>
     <script src="data/skateaidlocations.js" type="text/javascript"></script>
     <script src="js/map.js" type="text/javascript"></script>
 </body>
