added more data

--- a/index.html
+++ b/index.html
@@ -15,7 +15,27 @@
     <div id="sidebar">
         <h1 id="title">Projektname</h1>
 
-        <p class="lorem">Hier könnte der Projekttext stehen</p>
+        <h3>Kurzprofil</h3>
+        <table border="0" cellpadding="0" cellspacing="0" class="table">    
+            <tbody>         
+                <tr>            
+                    <td><strong>Land, Projektort:</strong></td>             
+                    <td id="country"></td>         
+                </tr>       
+                <tr>            
+                    <td><strong>Kurzbeschreibung:</strong></td>             
+                    <td id="description"></td>      
+                </tr>       
+                <tr>            
+                    <td><strong>Lokale Partner:</strong></td>           
+                    <td id="partner"></td>       
+                </tr>      
+                <tr>            
+                    <td><strong>Projektbeginn:</strong></td>            
+                    <td id="begin"></td>       
+                </tr>   
+            </tbody> 
+        </table>
 
         <div id="slides">
             <img src="img/example-slide-1.jpg" alt="Photo by: Missy S Link: http://www.flickr.com/photos/listenmissy/5087404401/">
