added picture slides

--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
         </table>
 
         <div id="slides">
-            <img src="img/example-slide-1.jpg" alt="Photo by: Missy S Link: http://www.flickr.com/photos/listenmissy/5087404401/">
-            <img src="img/example-slide-2.jpg" alt="Photo by: Daniel Parks Link: http://www.flickr.com/photos/parksdh/5227623068/">
-            <img src="img/example-slide-3.jpg" alt="Photo by: Mike Ranweiler Link: http://www.flickr.com/photos/27874907@N04/4833059991/">
-            <img src="img/example-slide-4.jpg" alt="Photo by: Stuart SeegerLink: http://www.flickr.com/photos/stuseeger/97577796/">
+            <img id="image1" src="http://www.skate-aid.org/_my_media/1/cms/Bilder_Dodoma/_tn/3987_13798_1_IMG_4063.JPG">
+            <img id="image2" src="http://www.skate-aid.org/_my_media/1/cms/Bilder_Dodoma/_tn/3983_13800_1_IMG_2776.JPG">
+            <img id="image3" src="http://www.skate-aid.org/_my_media/1/cms/Bilder_Dodoma/_tn/4002_13802_1_IMG_2581.JPG">
         </div>
     </div>
 
